maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:17: error: not found: value baggleWidth
  wallMark(baggleWidth,baggleHeight,count)
           ^